@@ -15,6 +15,7 @@ IUSE="gammu"
 
 RDEPEND="dev-python/pygtk
 	 dev-python/pybluez
+     dev-python/pyserial
 	 app-mobilephone/obexftp
 	 gammu? (dev-python/python-gammu)"
 DEPEND="${RDEPEND}"
