@@ -1,5 +1,9 @@
 Phonetooth
 
+next version
+- Allow connection through serial device
+- Contacts can be exported to csv
+
 version 0.2.1 (20-03-2008)
 - Fixed bug in UTF-8 detection
 
